--- a/manual_code/UART0_IRQ/uart0irq_uart1polling.uvprojx
+++ b/manual_code/UART0_IRQ/uart0irq_uart1polling.uvprojx
@@ -337,7 +337,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>DEBUG_0</Define>
+              <Define>DEBUG_0 DEBUG_1_</Define>
               <Undefine></Undefine>
               <IncludePath></IncludePath>
             </VariousControls>
